# dkdevtools

./: LICENSE  README.md  developer.md  pyproject.toml  requirements-all.txt  requirements-dev.txt
.github/: copilot-instructions.md
scripts/: new_tool.py
templates/cookiecutter-dktool/: README.md  cookiecutter.json
templates/cookiecutter-dktool/hooks/: post_gen_project.py
templates/cookiecutter-dktool/tools/{{cookiecutter.tool_slug}}/: README.md  pyproject.toml
templates/cookiecutter-dktool/tools/{{cookiecutter.tool_slug}}/tests/: test_basic.py
tools/_template_tool/: README.md  pyproject.toml
tools/_template_tool/src/template_tool/: __init__.py
tools/_template_tool/tests/: conftest.py  test_template_tool.py
tools/dk-sayhi/: README.md  pyproject.toml
tools/dk-sayhi/src/dk_sayhi/: __init__.py  cli.py
tools/dk-sayhi/tests/: test_sayhi.py
tools/project-root-finder/: README.md  pyproject.toml
tools/project-root-finder/src/projectroot/: __init__.py  cli.py
tools/project-root-finder/tests/: test_cli.py  test_projectroot.py  test_template_tool.py
