[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "template-tool"
version = "0.0.0"
description = "Template for dkdevtools tools. Copy and customize."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Derek" }
]
license = { text = "MIT" }
keywords = ["dkdevtools", "template", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
# Update these when copying the template
# mytool = "template_tool.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/template_tool"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.ruff.format]
quote-style = "double"
