[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dk-sayhi"
version = "0.1.0"
description = "Example dkdevtools plugin: say hi from CLI."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Derek" }
]
license = { file = "../../LICENSE" }
keywords = ["dkdevtools", "example", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
dk-sayhi = "dk_sayhi.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dk_sayhi"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL"]

[tool.ruff.format]
quote-style = "double"
